5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1594_2043.log
== TEST (2019-03-19 16:33:06) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a + b + c + d)/4
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:33:15) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a + b + c + d)/4
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:33:23) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a + b + c + d)/4
print(round(r,2))
-- EXECUTION TIME:
0.152277
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:33:44) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a + b + c + d)/4
print(round(r,2))
-- EXECUTION TIME:
0.176261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:33:47) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a + b + c + d)/4
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:34:01) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a + b + c + d)/4
print(round(r,2))
-- EXECUTION TIME:
0.137272
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:34:41) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a*1 + b*2 + c*3 + d*4)/10
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:34:54) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
r = (a*1 + b*2 + c*3 + d*4)/10
print(round(r,2))
-- EXECUTION TIME:
0.120557
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:37:57) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:38:06) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,2))
-- EXECUTION TIME:
0.173589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:48:42) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,1))
-- EXECUTION TIME:
0.103833
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:48:45) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,3))
-- EXECUTION TIME:
0.134999
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:48:48) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,4))
-- EXECUTION TIME:
0.156586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:48:50) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,3))
-- EXECUTION TIME:
0.199298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:48:51) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,3))
-- EXECUTION TIME:
0.173431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:48:53) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
print(round((a*1 + b*2 + c*3 + d*4)/10,2))
-- EXECUTION TIME:
0.162697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:49:20) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round((a*1 + b*2 + c*3 + d*4)/10,2)
-- EXECUTION TIME:
0.134213
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 7
    
                                             ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:21) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round((a*1 + b*2 + c*3 + d*4)/10,2)
-- ERROR:
File "XXXX", line 7
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:49:35) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.128889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:36) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:49:53) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.224632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:23:32) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = a*1 + b*2 + c*3 + d*4/10
print(round(f,2))
-- EXECUTION TIME:
0.235058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:23:34) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = a*1 + b*2 + c*3 + d*4/10
print(round(f,2))
-- EXECUTION TIME:
0.122244
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:23:35) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = a*1 + b*2 + c*3 + d*4/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:23:46) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = a*1 + b*2 + c*3 + d*4/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:24:04) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:24:54) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.134547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:25:18) 
-- CODE:
a = int()
b = int()
c = int()
d = int()
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:25:27) 
-- CODE:
a = int()
b = int()
c = int()
d = int()
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.185863
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
0.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:26:03) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:26:10) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.169344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:27:34) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:27:36) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.14496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:32:23) 
-- CODE:
a = 0
b = 0
c = 9
d = 10
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:32:26) 
-- CODE:
a = 0
b = 0
c = 9
d = 10
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.124371
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:32:48) 
-- CODE:
a = 0
b = 0
c = 9
d = 10
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:32:50) 
-- CODE:
a = 0
b = 0
c = 9
d = 10
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.183645
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:33:10) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.125513
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:43:51) 
-- CODE:
a = int()
b = int()
c = int()
d = int()
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:44:12) 
-- CODE:
a = int(0)
b = int(0)
c = int(9)
d = int(10)
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:44:15) 
-- CODE:
a = int(0)
b = int(0)
c = int(9)
d = int(10)
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.114428
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:44:19) 
-- CODE:
a = int(0)
b = int(0)
c = int(9)
d = int(10)
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.132977
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:46:04) 
-- CODE:
a = input()
b = input()
c = input()
d = input()
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = (a*1 + b*2 + c*3 + d*4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:46:17) 
-- CODE:
a = input()
b = input()
c = input()
d = input()
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.137698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 5, in <module>
    f = (a*1 + b*2 + c*3 + d*4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:46:20) 
-- CODE:
a = input()
b = input()
c = input()
d = input()
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = (a*1 + b*2 + c*3 + d*4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:47:12) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:47:15) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:47:23) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.141404
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:11:00) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.164948
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:03:43) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.127306
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:03:47) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:03:58) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.123145
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:27:27) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
f = (a*1 + b*2 + c*3 + d*4)/10
print(round(f,2))
-- EXECUTION TIME:
0.197368
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
